<resources>
    <string name="app_name">Jodidar Maza</string>
    <string name="tag_line">Your search for perfect partner ends here...</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="my_profile">My Profile</string>
    <string name="rate_app">Rate App</string>
    <string name="subscription_plan">Subscription Plan</string>
    <string name="provide_your">Provide your Mobile Number \n for Verification</string>
    <string name="mobile">Mobile No. *</string>
    <string name="mobile_">Mobile No. </string>
    <string name="alt_mobile">Alternate Mobile No.</string>
    <string name="password">Password *</string>
    <string name="firstName">First Name *</string>
    <string name="middleName">Middle Name *</string>
    <string name="lastName">Last Name *</string>
    <string name="signIn">Sign In</string>
    <string name="backToSignIn">Back to Sign In</string>
    <string name="dontHaveAnAccount">Don\'t have an account?</string>
    <string name="signUp">Sign Up</string>
    <string name="getOtp">Get OTP</string>
    <string name="personalDetails">Personal Details</string>
    <string name="contactDetails">Contact Details</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date">Date</string>
    <string name="birth_details">Birth Details</string>
    <string name="birthdate">Birthdate </string>
    <string name="age">Age</string>
    <string name="time">Birth Time</string>
    <string name="birth_place">Birth Place </string>
    <string name="birth_state">Birth State </string>
    <string name="birth_taluka">Birth Taluka </string>
    <string name="birth_district">Birth District </string>
    <string name="accurate">Accurate</string>
    <string name="approximate">Approximate</string>
    <string name="approx">Approx</string>
    <string name="city">City *</string>
    <string name="_city">City</string>
    <string name="village">Village</string>
    <string name="state">State *</string>
    <string name="country">Country</string>
    <string name="_state">State</string>
    <string name="district">District *</string>
    <string name="_district">District</string>
    <string name="taluka">Taluka *</string>
    <string name="_taluka">Taluka</string>
    <string name="pincode">Pincode *</string>
    <string name="postal_code">Postal code *</string>
    <string name="address_type">Address Type</string>
    <string name="email">Email Id *</string>
    <string name="_email">Email Id </string>
    <string name="alt_email">Alternate Email Id</string>
    <string name="search_state"> Search State</string>
    <string name="Open"> Open</string>
    <string name="Close"> Close</string>
    <string name="password1">Password</string>
    <string name="registered">Registered Mobile No.</string>
    <string name="indiaCode">+91</string>
    <string name="direct">Messages</string>
    <string name="Name">User Name</string>
    <string name="vertical_ellipses">&#8942;</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="remove_profile_photo">Remove Profile Photo</string>
    <string name="camera">Camera</string>
    <string name="mobile_no_on_another_account">This mobile no. is on another account</string>
    <string name="login_to_existing_account">Log in to existing account</string>
    <string name="create_new_account">Create New Account</string>
    <string name="log_on_to_another_account">You can log in to account associated with that
        mobile no. or can use new mobile no. to create new account.</string>
    <string name="set_preferences">Set Preferences</string>
    <string name="reset_preferences">Reset Preferences</string>
    <string name="who_are_you_looking_for">Who are you looking for?</string>
    <string name="location">Permanent Location</string>
    <string name="add_location">Add Location</string>
    <string name="age_should_be_between">Age should be between</string>
    <string name="salary_should_be_between">Salary should be between</string>
    <string name="height_should_be_between">Height should be between</string>
    <string name="willing_to_marry_in_other_communities">Willing to marry in other communities ?</string>
    <string name="qualification">Qualification</string>
    <string name="qualification_details">Qualification Details</string>
    <string name="highest_qualification">Highest Qualification</string>
    <string name="highest_qualification_level">Highest Qualification Level</string>
    <string name="qualification_level">Qualification Level</string>
    <string name="occupation">Occupation</string>
    <string name="occupation_">Occupation</string>
    <string name="occupation1">Occupation</string>
    <string name="occupation_details">Occupation Details</string>
    <string name="current_service">Current Service</string>
    <string name="name_of_department">Name of Department</string>
    <string name="service">Service </string>
    <string name="non_service">Non - Service </string>
    <string name="govt_job">Government Service </string>
    <string name="private_job">Private Service </string>
    <string name="working_in_abroad">Working in Abroad </string>
    <string name="working_in_india">Working in India </string>
    <string name="other">Other</string>
    <string name="father_information">Father\'s Information</string>
    <string name="is_alive">Is alive ?</string>
    <string name="father_name">Father\'s Name</string>
    <string name="mother_name">Mother\'s Name</string>
    <string name="mother_information">Mother\'s Information</string>
    <string name="occupation_father">Father\'s Occupation *</string>
    <string name="occupation_mother">Mother\'s Occupation *</string>
    <string name="family_income">Family Annual Income</string>
    <string name="annual_income">Annual Income</string>
    <string name="annual_income_father">Father\'s Annual Income</string>
    <string name="annual_income_mother">Mother\'s Annual Income</string>
    <string name="expected_individual_income">Expected Individual Income</string>
    <string name="expected_family_income">Expected Family Income</string>
    <string name="no_of_siblings">No. of siblings</string>
    <string name="no_of_mama">No. of Mamas</string>
    <string name="add_sibling">Add sibling</string>
    <string name="add_mama">Add Mama</string>
    <string name="name">Name</string>
    <string name="father_in_law_information">Father-in-law\'s Information</string>
    <string name="relation">Relation</string>
    <string name="married">Married</string>
    <string name="unmarried">Unmarried</string>
    <string name="caste">Caste </string>
    <string name="sub_caste">Sub Caste </string>
    <string name="religion">Religion </string>
    <string name="religious_details">Religious Details </string>
    <string name="basic_details">Basic Details </string>
    <string name="family_details">Family Details </string>
    <string name="gothram">Gothram </string>
    <string name="dosh">Dosh </string>
    <string name="mother_tongue">Mother Tongue</string>
    <string name="language">Language</string>
    <string name="change_language">Change Language</string>
    <string name="english">English (Default)</string>
    <string name="marathi">Marathi</string>
    <string name="hindi">Hindi</string>
    <string name="institue_university">Name of Institute or University</string>
    <string name="name_of_institute">Name of Institute</string>
    <string name="percentage">Percentage</string>
    <string name="add_percentage">Add Percentage </string>
    <string name="year">Year</string>
    <string name="passing_year">Passing Year</string>
    <string name="graduation">Graduation </string>
    <string name="post_graduation">Post Graduation </string>
    <string name="highest_qualification_details">Highest Qualifictaion Details</string>
    <string name="ssc">SSC</string>
    <string name="hsc">HSC</string>
    <string name="course">Course</string>
    <string name="acamedics">Academics</string>
    <string name="extra_activities">Extra Activities</string>
    <string name="hobby">Hobby</string>
    <string name="social_contributions">Social Contributions</string>
    <string name="company_name">Company Name</string>
    <string name="works_in">Works in *</string>
    <string name="designation">Designation</string>
    <string name="monthly_income">Monthly Income</string>
    <string name="salary_package">Package</string>
    <string name="experience">Experience (in years) </string>
    <string name="company_address">Company Address </string>
    <string name="bio">Bio</string>
    <string name="recently_viewed_profiles">Recently Viewed Profiles</string>
    <string name="gallery">Gallery</string>
    <string name="send_interest">Send Interest</string>
    <string name="send">Send</string>
    <string name="user_id">\@userId101</string>
    <string name="user_name">userName</string>
    <string name="user_bio">Your Bio here!!!..</string>
    <string name="about_me">About Me</string>
    <string name="profile_information">Profile Information</string>
    <string name="religious_information">Religious Information</string>
    <string name="professional_information">Professional Information</string>
    <string name="professional_details">Professional Details</string>
    <string name="family_information">Family Information</string>
    <string name="personal_information">Personal Information</string>
    <string name="educational_information">Educational Information</string>
    <string name="favorite">Favorites</string>
    <string name="add_to_favorite">Add to favorites</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_profile_photo">Add Profile Photo</string>
    <string name="add_from_gallery">Add from Gallery </string>
    <string name="add_from_camera">Add from Camera </string>
    <string name="add_profile_photo_desc">&#8226; Change your profile photo to represent yourself on JodidarMaza.</string>
    <string name="change_photo">Change photo</string>
    <string name="edit_profile_desc">Edit Profile so that others will know you better.</string>
    <string name="set_preferences_desc">Set your Preferences for better search results.</string>
    <string name="complete_your_profile">Complete your profile</string>
    <string name="add_bio">Add bio</string>
    <string name="add_your_basic_details">Add your basic details</string>
    <string name="tell_basic_details">Tell your friends a little bit about yourself.</string>
    <string name="tell_about_yourself">Tell your friends a little bit about yourself.</string>
    <string name="share_photo_desc">When you share photos, they\'ll appear on your profile</string>
    <string name="share_first_photo_desc">Share your first photo</string>
    <string name="profile">Profile</string>
    <string name="only_text">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="only_text_with_space">a bcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="add_farm">Add Farm Details</string>
    <string name="farm_details">Farm Details</string>
    <string name="crops_taken">Crops Taken</string>
    <string name="full">Full</string>
    <string name="partly">Partly</string>
    <string name="edit">Edit</string>
    <string name="save_cont">SAVE &amp; CONTINUE</string>
    <string name="full_name">Full name *</string>
    <string name="address">Address *</string>
    <string name="area">Area</string>
    <string name="home">Home</string>
    <string name="office">Office</string>
</resources>