<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group >
        <item
            android:id="@+id/nav_myProfile"
            android:icon="@drawable/profile2"
            android:title="My Profile" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/start1"
            android:title="Favourites" />
    </group>

    <group >
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/notification"
            android:title="Notification" />
        <item
            android:id="@+id/nav_rateApp"
            android:icon="@drawable/start1"
            android:title="Rate App" />
        <item
            android:id="@+id/nav_changeLanguage"
            android:icon="@drawable/start1"
            android:title="Change Language" >

            <menu>
                <group>
                <item android:id="@+id/nav_englisg"
                    android:title="@string/english"
                    />
                <item android:id="@+id/nav_marathi"
                    android:title="@string/marathi"
                    />
                <item android:id="@+id/nav_hindi"
                    android:title="@string/hindi"
                    />
                </group>
            </menu>
        </item>
    </group>

    <item android:title="More Options" >
        <menu >
            <item
                android:icon="@drawable/help"
                android:title="Forum" />
            <item
                android:icon="@drawable/red_heart"
                android:title="Headset" />
        </menu>
    </item>
</menu>