<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="55dp"
        android:orientation="vertical">



<!--        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@drawable/shadow_down" />-->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="29.7dp"
                android:layout_marginStart="29.7dp"
                android:orientation="vertical">





                <!--"TextInputLayout" is used with a styling theme...-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:theme="@style/TextLabel"
                   >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/full_name"
                        android:textColor="@color/text_black"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel"
                    >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile"
                        android:textColor="@color/text_black"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel"
                    >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:textColor="@color/text_black"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextLabel"
                        android:layout_marginTop="32.3dp"
                        android:textColorHint="@color/text_black"
                        android:layout_marginEnd="17dp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/area"
                            android:textColor="@color/text_black"
                            android:textSize="15sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:theme="@style/TextLabel"
                        android:layout_marginTop="32.3dp"
                        android:textColorHint="@color/text_black">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/city"
                            android:textColor="@color/text_black"
                            android:textSize="15sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:theme="@style/TextLabel"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32.3dp"
                        android:textColorHint="@color/text_black"
                        android:layout_marginEnd="17dp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/state"
                            android:textColor="@color/text_black"
                            android:textSize="15sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:theme="@style/TextLabel"
                        android:layout_marginTop="32.3dp"
                        android:textColorHint="@color/text_black">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/country"
                            android:textColor="@color/text_black"
                            android:textSize="15sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:theme="@style/TextLabel"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32.3dp"
                        android:textColorHint="@color/text_black"
                        android:layout_marginEnd="17dp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/pincode"
                            android:textColor="@color/text_black"
                            android:textSize="15sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="32.3dp"
                        android:textColorHint="@color/text_black">

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32.7dp"
                    android:text="@string/address_type"
                    android:textSize="11.7sp"
                    android:textColor="@color/text_black"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="25.1dp"
                    android:layout_marginBottom="22dp">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home"
                        android:textSize="15sp"
                        android:textColor="@color/text_black"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/office"
                        android:textSize="15sp"
                        android:layout_marginStart="42.3dp"
                        android:textColor="@color/text_black"/>

                </RadioGroup>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <!--"alignParentBottom" property is used to stitch the textview
    at the bottom pf the screen...-->
    <TextView
        android:id="@+id/txt_saveAndContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/gradient_place_order"
        android:gravity="center"
        android:paddingBottom="17.3dp"
        android:paddingTop="17.3dp"
        android:text="@string/save_cont"
        android:textColor="@color/white" />

</RelativeLayout>