<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_rounded_corners"
    android:layout_marginTop="40dp"
    android:layout_marginBottom="40dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="20dp"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_black"
            android:textSize="15sp"
            android:text="@string/farm_details"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"

                >


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel"
                    android:layout_marginTop="25dp"
                    >

                    <EditText
                        android:id="@+id/editText_farmArea"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/area"
                        android:textColor="@color/text_black"
                        android:textSize="15sp"
                        android:singleLine="true"/>

                </com.google.android.material.textfield.TextInputLayout>



                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioGroup_type"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    android:theme="@style/RadioButtonTheme"
                    >

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButton_full"
                        android:text="@string/full"
                        android:textSize="13sp"
                        android:textColor="@color/text_black"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButton_partly"
                        android:text="@string/partly"
                        android:textSize="13sp"
                        android:layout_marginStart="25dp"
                        android:textColor="@color/text_black"
                        android:checked="true"
                        />

                </RadioGroup>



                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel"
                    android:layout_marginTop="15dp"
                    >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/editText_crops"
                        android:hint="@string/crops_taken"
                        android:textColor="@color/text_black"
                        android:textSize="15sp"
                        android:lineSpacingMultiplier="1.2"
                        android:maxLines="5"
                        android:inputType="textMultiLine"
                        />

                </com.google.android.material.textfield.TextInputLayout>






            </LinearLayout>


        </ScrollView>


    </LinearLayout>

    <!--"alignParentBottom" property is used to stitch the textview
    at the bottom pf the screen...-->


    <TextView
        android:id="@+id/textView_addFarm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/gradient_bottom_rounded_corner"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/add_farm"
        android:textColor="@color/white"
        android:duplicateParentState="true"
        android:layout_alignParentBottom="true"
        />




</RelativeLayout>