<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/linearLayout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_corner_gray_border"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:id="@+id/circleImage_profilePic"
            android:layout_marginTop="10dp"
            android:src="@drawable/flower3"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_userName"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/user_name"
            android:textColor="@color/text_black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_userId"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/user_id"
            android:textColor="@color/text_gray"
            android:textSize="12sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_send"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/gradient_rounded_corners"
            android:gravity="center_horizontal"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            android:paddingBottom="5dp"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="13sp" />


    </LinearLayout>
