<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/relativeLayout_directMesssages"
    android:layout_marginBottom="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:id="@+id/linearlayout"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_id"
            android:visibility="gone"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_name"
            android:text="@string/Name"
            android:layout_marginEnd="5dp"
            android:textColor="@color/text_black"
            android:textSize="13sp"

            android:layout_weight="1"
            android:singleLine="true"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_mobileNo"
            android:text="@string/mobile_"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/text_gray"
            android:textSize="13sp"

            android:singleLine="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_edit"
            android:text="@string/edit"
            android:layout_marginStart="5dp"
            android:textColor="@color/text_gray"
            android:textSize="13sp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:singleLine="true"
            android:background="@drawable/rounded_corner_gray_border"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/shadow"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        android:background="@drawable/shadow_down"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="1dp"

        />

</LinearLayout>